--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
-
 {
-  "name": "gocityvibes-backend",
+  "name": "go-city-vibes-backend",
   "version": "1.0.0",
+  "description": "Backend for Go City Vibes concierge chatbot",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "openai": "^4.28.1"
   }
 }
