--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
+
 {
-  "name": "gocityvibes-backend",
-  "version": "2.0.0",
-  "description": "Backend for GoCityVibes with upgrades",
+  "name": "gocityvibes-travel-backend",
+  "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
