--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
-  "name": "gocityvibes-travel-backend",
-  "version": "1.0.0",
+  "name": "gocityvibes-backend",
+  "version": "1.0.1",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
