--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "gocityvibes-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
