--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
 
+{
+  "name": "gocityvibes-backend",
+  "version": "1.0.0",
+  "description": "GoCityVibes backend with GPT and API fallback",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^4.28.1"
+  }
+}
