--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "gocityvibes-backend",
   "version": "1.0.0",
@@ -8,11 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.28.1",
-    "axios": "^1.6.0"
+    "openai": "^4.28.1"
   }
 }
