--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.28.1"
+    "node-fetch": "^2.6.7"
   }
 }
