--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "gcv-affiliate-backend",
+  "name": "gcv-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "openai": "^4.21.1"
+    "openai": "^4.0.0",
+    "body-parser": "^1.20.2"
   }
 }
