--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
+
 {
-  "name": "gcv-affiliate-backend",
+  "name": "concierge-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "openai": "^4.21.1"
+    "cors": "^2.8.5",
+    "openai": "^4.19.1"
   }
 }
