--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
-
 {
-  "name": "concierge-backend",
+  "name": "gcv-affiliate-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "openai": "^4.19.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "openai": "^4.21.1"
   }
 }
